--- a/Parked Website/Møte/index.html
+++ b/Parked Website/Møte/index.html
@@ -1,12 +1,12 @@
 <html lang="en">
     <head>
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-QJ19W9CBHH"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=na"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
 
-            gtag('config', 'G-QJ19W9CBHH');
+            gtag('config', 'na');
         </script>
 
         <script src="https://cdn.logwork.com/widget/countdown.js"></script>
