--- a/Draft Environment_chinatwang.no/index.html
+++ b/Draft Environment_chinatwang.no/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
     <head>
         <meta name="description" content="Velkommen til China Twang Skien ved nedre Hjellen, du kan bestille Mat eller Bord ved å ringe 35 52 80 70." />
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-QJ19W9CBHH"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=na"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
 
-            gtag('config', 'G-QJ19W9CBHH');
+            gtag('config', 'na');
             // G-N8M699S4H8 Second property oyu have for some reasone "China Twang - GA4"
         </script>
         <meta charset="UTF-8">
