--- a/Draft Environment_chinatwang.no/menu.html
+++ b/Draft Environment_chinatwang.no/menu.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QJ19W9CBHH"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=na"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'G-QJ19W9CBHH');
+        gtag('config', 'na');
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
